Changes in TBD
  o Handle newlines better in transform run properties files - run properties configured as multi-line types
  o Remove outdated vignette and other doc files from package

Changes in version 2.3.3
  o Issue 38841: Rlabkey needs to translate NULL to NA for new GWTDomain "instructions" property

Changes in version 2.3.2
  o Fix typo in labkey.webdav.put for generated Rlabkey.pdf (Issue 37739)
  o Issue 38427: In Rlabkey, labkey.selectRows with colNameOpt="rname" does not sanitize "::"
  o Item 6165: New API for truncating tables (delete all rows)
  o Item 6174: New API for labkey.experiment.saveRuns (similar to saveBatch API usage)

Changes in version 2.3.1
  o Fix for makeFilter URLencode to use reserved = TRUE
  o When using labkey.selectRows, default showHidden to TRUE when using colSelect property

Changes in version 2.3.0
  o WebDav support in Rlabkey with functions like labkey.webdav.get, labkey.webdav.put, labkey.webdav.delete, etc. (from Ben Bimber)

Changes in version 2.2.5
  o Issue 36894: labkey.domain.get fix to translate NULL values for string props to NA
  o Issue 36837: correctly parse GROUP CONCAT response with array of string values

Changes in version 2.2.4
  o New function to set and get module properties
  o allow getting baseUrl using labkey.getBaseUrl
  o allow NA translation behavior to be overridden in insertRows and importRows

Changes in version 2.2.3
  o New helper functions for RStudio integration
  o New helper functions for use with R transform scripts to process run properties from server
  o New function to save experiment runs for an assay or a non-assay backed protocol

Changes in version 2.2.2
  o New APIs for getting, creating, inferring and dropping LabKey domains (requires LabKey server version 18.2 or later)
  o Fix for Issue #18: labkey.executeSql breaks when using the containerFilter option
  o Add labkey.setDebugMode(TRUE) option to output GET/POST raw response info